--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+.body{
+
+  border: 2px solid black;
+  padding: 25px;
+  background: url(../src/body.jpg);
+  background-repeat: no-repeat;
+  background-size: auto;
+}
